# dan_max_bids_parser

./: .gitignore  .pre-commit-config.yaml  README.md  dan_max_bids.db  dev.sqlite  pyproject.toml
docs/: architecture_overview.md  dan_max_diagrams.md
docs/index/: modules_index.md
docs/roadmap/: dan_max_implementation_plan.md
migrations/: env.py
migrations/versions/: 2bfccf31f0dc_rename_sources_type_to_kind.py  468e0efd141c_cleanup_sources_schema.py  5f2851ddc47c_initial_schema.py
src/dan_max_bids_parser/: __init__.py  config.py
src/dan_max_bids_parser/application/: unit_of_work.py
src/dan_max_bids_parser/application/use_cases/: harvest_source.py  harvest_source_service.py
src/dan_max_bids_parser/domain/: entities.py  ports.py
src/dan_max_bids_parser/infrastructure/db/: base.py  (+3 more)
src/dan_max_bids_parser/interfaces/: harvest_source_cli.py
tests/: test_log.txt
tests/application/: test_run_source_harvesting_interface.py  test_run_source_harvesting_service.py  test_unit_of_work_contract.py
tests/db/: test_db_base.py  test_initial_schema.py  test_models_metadata.py  test_repositories_basic_crud.py  test_unit_of_work_sqlalchemy.py
tests/domain/: test_entities_basic.py
tests/infrastructure/http/: test_html_client.py  test_html_parse.py
tests/infrastructure/parsers/: test_samosval_html_parser.py
tests/infrastructure/providers/: test_samosval_raw_item_provider.py  test_samosval_raw_item_provider_adapter.py
tests/integration/: test_samosval_harvesting_flow.py
tests/interfaces/: test_harvest_source_cli.py
tools/: generate_module_index.py
(+5 files in other folders)
